--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,5 +1,5 @@
 nav {
-	z-index: 10;
+	z-index: 20;
 	width: 100%;
 	font-size: 1.25rem;
 	padding: 1rem;
